--- a/Drift/config/services.yml
+++ b/Drift/config/services.yml
@@ -15,15 +15,16 @@ command_bus:
         middlewares:
             - App\Domain\Middleware\UpperCaseMiddleware
 
-dbal:
-    connections:
-        users:
-            driver: mysql
+event_bus:
+    exchanges:
+        events: events
+    router:
+        _all: events
+    async_pass_through: false
+    async_adapter:
+        adapter: amqp
+        amqp:
             host: localhost
-            port: 3306
-            user: root
-            password: root
-            database: users
 
 # config/services.yaml
 services:
@@ -51,6 +52,8 @@ services:
             - { name: command_handler }
 
     App\Domain\Model\InMemoryUserRepository:
-    Infrastructure\DBAL\Model\DBALUserRepository:
     App\Domain\Model\UserRepository:
-        alias: Infrastructure\DBAL\Model\DBALUserRepository
+        alias: App\Domain\Model\InMemoryUserRepository
+
+    App\Domain\Listener\:
+        resource: "%app_path%/src/Domain/Listener/*"
