--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,12 @@
         "drift/react-functions": "0.1.*",
         "drift/event-loop-utils": "0.1.*",
         "drift/command-bus-bundle": "0.1.*",
+        "drift/event-bus-bundle": "0.1.*",
         "drift/phpunit-bridge": "0.1.*",
         "drift/dbal-bundle": "0.1.*",
         "clue/reactphp-sqlite": "*",
-        "react/mysql": "*"
+        "react/mysql": "*",
+        "drift/amqp-bundle": "0.1.*"
     },
     "autoload": {
         "psr-4": {
