--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3'
 
+networks:
+  main:
+
 services:
 
   mysql:
     image: "mysql:8"
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
+    networks:
+      - main
     environment:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: root
@@ -18,6 +23,31 @@ services:
   rabbitmq:
     image: "rabbitmq:3-management"
     container_name: rabbitmq
+    networks:
+      - main
     ports:
       - "5672:5672"
       - "15672:15672"
+
+  tiny_balancer:
+    image: "driftphp/tiny-balancer"
+    ports:
+      - "8000:8000"
+    networks: [ main ]
+    entrypoint: [ "php", "balancer", "8000", "server_1:8000", "server_2:8000" ]
+
+  server_1:
+    build: .
+    entrypoint: ["sh", "/wait-and-run.sh", "/server-entrypoint.sh"]
+    networks:
+      - main
+    ports:
+      - 8001:8000
+
+  server_2:
+    build: .
+    entrypoint: [ "sh", "/wait-and-run.sh", "/server-entrypoint.sh" ]
+    networks:
+      - main
+    ports:
+      - 8002:8000
